--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
 </head>
 <body>
 
-<div class="container">
-  <h1>One step at a time.</h1>
-  <p>Voila</p>
+<div class="container p-3 my-3 bg-dark text-white">
+  <h1>Book Review: The Rosie Project</h1>
+  <p>This book came with a commanding recommendation from a good friend, "best book ever". 
+  I hadn't read a novel in more than 5 years, and to break that streak, I was being recommended a love story. To top this, Bill Gates included it in his summer reading list (https://www.gatesnotes.com/About-Bill-Gates/6-Books-I-Would-Recommend-Summer-Reading) I therefore had extremely high expectations. 
+  
+ I started reading this book at midgnight. 4 hours later, my bed time read had turned into the book that kept me awake past mignight. I finished the book before sleeping joyfully thinking about the story. 
+ 
+ The plot of "The Rosie Project" is gripping, funny and embedded with nerdy facts. I smiled and laughed quite a bit. It's been a while since I had read a novel with magic powers to uplift your mood. 
+ 
+ The protagonist Don Tillman, is an unmarried genetics professor with a penchant for rationality, organization and science. He finds comfort and mind peace in everyday chores. Some highlights from the book which are worth implementing in our lives: 
+ ** Cooking meals and the adoption of the "Standardized Meal System" -  Excellent food, superior to most restaurants at a much lower price 
+ ** Scheduling meetings and deliberate planning of activites on calendar. He asks a very pertinent question: "Why do people value others’ time so little? 
+ 
+  My friends who have read this book were of the opinion that Don Tillman is the Sheldon Cooper (from the popular TV series The Big Bang Theory) of Genetics from Australia. 
+  
+  I however felt that Professor Don Tillman is realistic, more likeable character in comparison to Sheldon Cooper. Chief among these differences being: 
+  ** Independence: Don Tillman doesn't depend on another human being to protect him/drive him around. 
+  ** Maturity: Don Tillman doesn't whine or project weakness. 
+  
+  If you are looking for an escape for a few hours (It's a short read at 290 pages), look no further than the Rosie Project by Graeme Simison. 
+  
+  June 21, 2020 
+  Chandana   
+  
+  </p>
 </div>
 
 </body>
