--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
 </head>
 <body>
 
-<div class="container p-3 my-3 bg-dark text-white">
+<div class="container-sm p-4 my-4 bg-dark text-white" style="max-width:720px">
   <h1>Book Review: The Rosie Project</h1>
-  <p>This book came with a commanding recommendation from a good friend, "best book ever". 
-  I hadn't read a novel in more than 5 years, and to break that streak, I was being recommended a love story. To top this, Bill Gates included it in his summer reading list (https://www.gatesnotes.com/About-Bill-Gates/6-Books-I-Would-Recommend-Summer-Reading) I therefore had extremely high expectations. 
+  <p>
   
- I started reading this book at midgnight. 4 hours later, my bed time read had turned into the book that kept me awake past mignight. I finished the book before sleeping joyfully thinking about the story. 
+  This book came with a commanding recommendation from a good friend, "best book ever". 
+  I hadn't read a novel in more than 5 years, and to break that streak with a love story sounded abominable. To top this, I discovered that Bill Gates had included it in his  <a href="https://www.gatesnotes.com/About-Bill-Gates/6-Books-I-Would-Recommend-Summer-Reading">2014 summer reading list</a>. I therefore had a high bar for the book when I decided to take the plunge.<br> <br>
+  
+ I started reading this book at midgnight. 4 hours later, my bed time read had turned into the book-that-kept-me-awake-way-past-mignight read. The plot of "The Rosie Project" is gripping, funny and embedded with nerdy facts. I smiled and laughed quite a bit. It's been a while since I had read a novel with magic powers to uplift your mood. <br><br>
  
- The plot of "The Rosie Project" is gripping, funny and embedded with nerdy facts. I smiled and laughed quite a bit. It's been a while since I had read a novel with magic powers to uplift your mood. 
+ The protagonist Don Tillman, is an unmarried genetics professor with a penchant for rationality, organization and science. He finds comfort and mind peace in routine, planning and habits. Some highlights from the book which are worth implementing in our lives:
+<dd>- Cooking meals and the adoption of the "Standardized Meal System". One of the benefits being "Excellent food, superior to most restaurants at a much lower price" <br>
+	- Scheduling meetings and deliberate planning of activites on calendar. He asks a very pertinent question: "Why do people value others’ time so little? </dd> <br>
  
- The protagonist Don Tillman, is an unmarried genetics professor with a penchant for rationality, organization and science. He finds comfort and mind peace in everyday chores. Some highlights from the book which are worth implementing in our lives: 
- ** Cooking meals and the adoption of the "Standardized Meal System" -  Excellent food, superior to most restaurants at a much lower price 
- ** Scheduling meetings and deliberate planning of activites on calendar. He asks a very pertinent question: "Why do people value others’ time so little? 
- 
-  My friends who have read this book were of the opinion that Don Tillman is the Sheldon Cooper (from the popular TV series The Big Bang Theory) of Genetics from Australia. 
+ My friends who have read this book were of the opinion that Don Tillman is the Sheldon Cooper (from the popular TV series The Big Bang Theory) of Genetics from Australia. I however felt that Professor Don Tillman is a realistic and more likeable character in comparison to Sheldon Cooper. Chief among these differences being: <br>
+  <dd>- Independence: Don Tillman doesn't depend on another human being to protect him/drive him around. <br>
+ - Maturity: Don Tillman doesn't whine or project weakness. </dd>  
+  If you are looking for an escape for a few hours (It's a short read at 290 pages), look no further than the Rosie Project by Graeme Simison. <br><br>
   
-  I however felt that Professor Don Tillman is realistic, more likeable character in comparison to Sheldon Cooper. Chief among these differences being: 
-  ** Independence: Don Tillman doesn't depend on another human being to protect him/drive him around. 
-  ** Maturity: Don Tillman doesn't whine or project weakness. 
-  
-  If you are looking for an escape for a few hours (It's a short read at 290 pages), look no further than the Rosie Project by Graeme Simison. 
-  
-  June 21, 2020 
+  June 21, 2020 <br>
   Chandana   
   
   </p>
