--- a/index.html
+++ b/index.html
@@ -30,10 +30,28 @@
   If you are looking for an escape for a few hours (It's a short read at 290 pages), look no further than the Rosie Project by Graeme Simison. <br><br>
   
   June 21, 2020 <br>
-  Chandana   
   
   </p>
 </div>
-
+	
 </body>
+	
+<body>
+
+<div class="container-sm p-4 my-4 bg-dark text-white" style="max-width:720px">
+  <h1>Prompt: CANNED FILM.</h1>
+  <p>A teenage love story goes hay-wire when Sharon discovers that she no longer has citizenship rights to the country she had inhibited for the past 20 years. Sharon in a precipitous act decides to become an astronaut and volunteers to become a permanent citizen of the international space station. The solitude in the space station in the company of far-away stars, asteroids and comets makes her realise she missed home. She decides to create a home of her own, procreating with donor sperms from male colleagues and colonizes ISS. 
+<br>
+Years later, her daughter falls in love with a visiting astronaut and wants to defect to planet earth. Sharon denies permission for her daughter to move. Her daughter, in a fit of rage fuelled by thwarted love sets ISS on fire. The movie ends with an image of the ISS glowing, fierce ball of fire. 
+
+  
+  Dec 30, 2020 <br>
+ 
+  
+  </p>
+</div>
+	
+</body>	
+	
+	
 </html>
